<resources>
    <string name="app_name">CommonDialog</string>
    <string name="string_style">选择风格</string>
    <string name="string_ios">iOS</string>
    <string name="string_material">Material</string>
    <string name="string_kongzue">KongZue</string>
    <string name="string_theme">选择主题</string>
    <string name="string_light">亮色</string>
    <string name="string_dark">暗色</string>
    <string name="string_dialog">对话框</string>
    <string name="string_hint">提示</string>
    <string name="string_other">其他功能演示</string>
    <string name="string_notify">跨域通知</string>
    <string name="string_bottom_meun">底部菜单</string>
    <string name="string_msg_dialog">消息对话框</string>
    <string name="string_select_msg_dialog">选择对话框</string>
    <string name="string_input_msg_dialog">输入对话框</string>
    <string name="string_wait_msg_hint">等待对话框</string>
    <string name="string_wait_msg_dialog">等待对话框</string>
    <string name="string_wait_msg_dialog_hint">等待 + 提示对话框</string>
    <string name="string_modal_msg_dialog">序列化对话框</string>
    <string name="string_break_msg_dialog">显示Dialog时关闭Activity</string>
    <string name="string_notify_msg_dialog">显示跨域通知</string>
    <string name="string_bottom_msg_dialog">底部菜单</string>
    <string name="string_bottom_menu_with_title_msg_dialog">标题底部菜单</string>
    <string name="string_bottom_share_msg_dialog">分享对话框</string>
    <string name="string_custom_layout">自定义内容布局</string>
    <string name="string_custom_msg_dialog">对话框</string>
    <string name="string_custom_input_msg_dialog">输入框</string>
    <string name="string_custom_bottom_menu_msg_dialog">底部菜单</string>
    <string name="string_custom_notify_msg_dialog">通知</string>
    <string name="string_custom_dialog">完全自定义对话框</string>
</resources>
